<resources>
    <string name="app_name">Health Aide</string>
    <string name="new_medical_records">New Medical Records</string>
    <string name="filter_medical_records">Filter Medical Records</string>
    <string name="revisiting_event">Revisiting Event</string>
    <string name="allergy_history">Allergy History</string>
    <string name="export_medical_records">Export Case</string>
    <string name="me">Me</string>

    <string name="search_medical_records">Search Medical Records</string>
    <string name="empty_medical_records_prompt_message">Please add your medical records!</string>
    <string name="empty_revisiting_prompt_message">Please add your revisiting event!</string>
    <string name="empty_select_revisiting_prompt_message">Please add your medical records first!</string>

    <!--New MedicalRecords-->
    <string name="symptom">Symptom</string>
    <string name="type">Type</string>
    <string name="therapeutic_method">Therapeutic method</string>
    <string name="hospital">Hospital</string>
    <string name="doctor">Doctor</string>
    <string name="title">Title</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>firs
    <string name="submit">Submit</string>
    <string name="recent_medical_records">Recent medical records</string>
    <string name="revisiting_date">Revisiting Date</string>
    <string name="medical_records_photo">Medical records photo</string>
    <string name="medical_records_detail">Medical records Detail</string>
    <string name="select_picture">Select Picture</string>

    <!-- Revisiting -->
    <string name="select_revisiting">Select revisiting medical records</string>
    <string name="select_revisiting_date">Select revisiting date</string>
    <string name="add_revisiting_event_success">Revisiting date add success!</string>

    <!-- Me -->
    <string name="user_info">User info</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="age_error_message">Please input the right age format!</string>
    <string name="height_error_message">Please input the right height format!</string>
    <string name="weight_error_message">Please input the right weight format!</string>
    <string name="version">Version</string>
    <string name="about_us">About us</string>
    <string name="suggest">Give us feedback</string>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
