<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_16"
        android:text="@string/user_info"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/large_text_size" />

    <RelativeLayout
        android:id="@+id/gender_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_16"
            android:text="@string/gender"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/gender_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/space_16"
            android:text="女"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/dividerColor" />

    <RelativeLayout
        android:id="@+id/age_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_16"
            android:text="@string/age"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/age_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/space_16"
            android:text="18"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/dividerColor" />

    <RelativeLayout
        android:id="@+id/height_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_16"
            android:text="@string/height"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/height_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/space_16"
            android:text="160cm"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/dividerColor" />

    <RelativeLayout
        android:id="@+id/weight_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_16"
            android:text="@string/weight"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/weight_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/space_16"
            android:text="49kg"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/dividerColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_16"
        android:text="@string/about_us"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/large_text_size" />

    <TextView
        android:id="@+id/suggest_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_16"
        android:text="@string/suggest"
        android:textSize="@dimen/medium_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/dividerColor" />
</LinearLayout>